--- a/src/calendarBookingForm/Components/VariantList.scss
+++ b/src/calendarBookingForm/Components/VariantList.scss
@@ -5,23 +5,29 @@
 .VariantListTotal-Grid{
     margin-top: 2rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
-    "box1 . box2";
+    "box1 box2 box3";
+    align-items: center;
 }
-.VariantListTotal-GrandTotal{
-    grid-area: box1;
-    font-size: 15px;
+.VariantListTotal-Label, .VariantListTotal-Value {
+    display: flex;
+    justify-content: flex-start;
+    font-weight: bold;
+}
+.VariantListTotal-Action {
+    margin: .1rem 0 .1rem 0;
+    grid-area: box3;
+    display: flex;
+    justify-content: center;
 }
 .VariantListTotal-ConfirmBtn{
-    margin: .1rem 0 .1rem 0;
-    grid-area: box2;
     background-color: $color-primary-blue;
     border: none;
     border-radius: 3px;
     color: $color-white;
     text-align: center;
-    width: 5rem;
+    width: 6rem;
     font-size: 15px;
     padding: .5rem;
     &:hover{
